--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import "~@fortawesome/fontawesome-free/css/all.min.css";
-@import './globals/variables';
-@import './components/houseButton';
 
-body {
-  background-color: antiquewhite;
-  color: brown;
-}
+@import './globals';
+
+
+@import './components';
